fix(ui): fix background on iOS ;

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,11 +39,17 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
   z-index: -20;
-  /* min-height: '100dvh'; */
   width: 100%;
+  height: 100%;
+  /* Extend past safe area on iOS */
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   margin: 0;
   padding: 0;
+  padding-bottom: env(safe-area-inset-bottom);
   background: black;
   background: radial-gradient(circle at 120% 250%, #b55a14 15%, #000000 85%);
 }
